# varint_rvv

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: benchmark.cc  benchmark_results.txt  plot_benchmark.py  plot_benchmark_distributions.py  results.json
example/: compress.c  example.c
lib/include/: libvarintrvv.h  utils.h
lib/src/: varint_decode.c  varint_decode_maskedvbyte.c  varint_decode_maskshift.c  varint_decode_plain.c  varint_decode_scalar.c  varint_decode_vecshift.c  varint_encode.c  varint_rvv.S  varintdecode.c  varintdecode_plain.c
